# crawdad

./: CONTRIBUTING.md  Cargo.toml  HOWTO.md  README.md  lex2keys.py
.github/workflows/: rust.yml
bench/: .gitignore  Cargo.toml  README.md
bench/benches/: benchmark.rs  search.rs
bench/data/: README.md  ipadic.1k.queries  ipadic.txt
bench/data/unidic/: unidic.1k.queries
bench/src/: bench.rs  benchmark.rs  constr.rs  main.rs  measure.rs  memory.rs
scan/: Cargo.toml
scan/src/: crawdad.rs  write.rs  yada.rs
src/: builder.rs  bytes.rs  embed_trie.rs  errors.rs  fmptrie.rs  hasher.rs  lib.rs  mapper.rs  mpftrie.rs  mptrie.rs  rhtrie.rs  trie.rs  utils.rs
src/builder/: freqmap.rs  nomap.rs  plus.rs  xor.rs
src/embed_trie/: nomap.rs
src/mptrie/: freqmap.rs  nomap.rs
src/rhtrie/: freqmap.rs  nomap.rs
src/trie/: freqmap.rs  iter.rs  nomap.rs  plus.rs  xor.rs
