[package]
name = "crawdad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seahash = { git = "https://gitlab.redox-os.org/redox-os/seahash", version = "4.1.0" }

[workspace]
members = [
    "bench",
]
