[package]
name = "crawdad"
version = "0.4.0"
edition = "2021"
authors = ["Shunsuke Kanda <shnsk.knd@gmail.com>"]
description = "Crawdad: ChaRActer-Wise Double-Array Dictionary"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/daac-tools/crawdad"
repository = "https://github.com/daac-tools/crawdad"
readme = "README.md"
keywords = ["search", "text", "double-array", "trie"]
categories = ["text-processing", "algorithms", "data-structures", "no-std"]
exclude = [".*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = ["alloc"]

alloc = []
